force-app/main/default/objects/ProductGroupMapping__c/ProductGroupMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting maps the values from Lead.Product_of_Interest field to the product category used to determine the type of Field Service Rep to whom the Opportunity should be assigned upon conversion.</description>
    <label>Product Group Mapping</label>
</CustomObject>