force-app/main/default/objects/ProductGroupMapping__c/fields/MappingType__c.field-meta.xml
<CustomField>
    <fullName>MappingType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What group is this mapping for?</inlineHelpText>
    <label>Mapping Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>