force-app/main/default/objects/ProductGroupMapping__c/fields/NotifyOwner__c.field-meta.xml
<CustomField>
    <fullName>NotifyOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If a new lead comes in for this sales org notify the owner.</inlineHelpText>
    <label>Notify Owner?</label>
    <type>Checkbox</type>
</CustomField>