force-app/main/default/objects/ProductGroupMapping__c/fields/NSS_Source__c.field-meta.xml
<CustomField>
    <fullName>NSS_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Inbound vs outbound</inlineHelpText>
    <label>NSS Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>