force-app/main/default/objects/ProductGroupMapping__c/fields/NSS_Team__c.field-meta.xml
<CustomField>
    <fullName>NSS_Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The NSS Team in the Prospect Ownership History record.</inlineHelpText>
    <label>NSS Team</label>
    <length>10</length>
    <type>Text</type>
</CustomField>