force-app/main/default/objects/ProductGroupMapping__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field indicates the product grouping, associated with an FSR, that will be used to lookup the correct FSR in the product/zip code table.</inlineHelpText>
    <label>Product Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>