force-app/main/default/objects/ProductGroupMapping__c/fields/Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_of_Interest__c</fullName>
    <description>This field contains a value from the Lead.Products__c field.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field contains a value from the Lead.Products__c field.</inlineHelpText>
    <label>Product</label>
    <length>40</length>
    <type>Text</type>
</CustomField>