force-app/main/default/objects/ProductGroupMapping__c/fields/RecordTypeName2__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type Name2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>