force-app/main/default/objects/ProductGroupMapping__c/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If this product will default on an audit record, the record type name to use</inlineHelpText>
    <label>Record Type Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>