force-app/main/default/objects/ProductGroupMapping__c/fields/ReferralPartner__c.field-meta.xml
<CustomField>
    <fullName>ReferralPartner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The specific referral partner this product maps to</inlineHelpText>
    <label>Referral Partner</label>
    <length>40</length>
    <type>Text</type>
</CustomField>