force-app/main/default/objects/ProductGroupMapping__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <inlineHelpText>The Revenue Credit</inlineHelpText>
    <label>Revenue</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>