force-app/main/default/objects/ProductGroupMapping__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <description>Matches up to the SalesOrg__c custom setting</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Org</label>
    <length>20</length>
    <type>Text</type>
</CustomField>