force-app/main/default/objects/ProductGroupMapping__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <inlineHelpText>The Unit credit</inlineHelpText>
    <label>Units</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>