force-app/main/default/objects/ProductGroupMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MappingType__c</columns>
    <columns>NSS_Team__c</columns>
    <columns>Product_of_Interest__c</columns>
    <columns>Product_Group__c</columns>
    <columns>NSS_Source__c</columns>
    <columns>ReferralPartner__c</columns>
    <columns>Revenue__c</columns>
    <columns>Units__c</columns>
    <columns>NotifyOwner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>