force-app/main/default/objects/ProductGroupMapping__c/listViews/NSS_Referral.listView-meta.xml
<ListView>
    <fullName>NSS_Referral</fullName>
    <columns>NAME</columns>
    <columns>NSS_Team__c</columns>
    <columns>Product_of_Interest__c</columns>
    <columns>Product_Group__c</columns>
    <columns>ReferralPartner__c</columns>
    <columns>NSS_Source__c</columns>
    <columns>IsDefault__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MappingType__c</field>
        <operation>equals</operation>
        <value>NSS Referral</value>
    </filters>
    <label>NSS Referral</label>
</ListView>