force-app/main/default/objects/ProductGroupMapping__c/listViews/NSSSales_PAY.listView-meta.xml
<ListView>
    <fullName>NSSSales_PAY</fullName>
    <columns>NAME</columns>
    <columns>NSS_Team__c</columns>
    <columns>Product_of_Interest__c</columns>
    <columns>Product_Group__c</columns>
    <columns>ProductType__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>Sales_Org2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MappingType__c</field>
        <operation>equals</operation>
        <value>NSSSales</value>
    </filters>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>PAY</value>
    </filters>
    <label>NSSSales-PAY</label>
</ListView>