force-app/main/default/objects/ProductGroupMapping__c/listViews/Prod.listView-meta.xml
<ListView>
    <fullName>Prod</fullName>
    <columns>NAME</columns>
    <columns>NSS_Team__c</columns>
    <columns>Product_of_Interest__c</columns>
    <columns>Product_Group__c</columns>
    <columns>ReferralPartner__c</columns>
    <columns>Revenue__c</columns>
    <columns>Units__c</columns>
    <columns>RecordTypeName__c</columns>
    <columns>RecordTypeName2__c</columns>
    <columns>NSS_Source__c</columns>
    <columns>MappingType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MappingType__c</field>
        <operation>startsWith</operation>
        <value>Prod</value>
    </filters>
    <label>Prod</label>
</ListView>